--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
     ext {
         kotlin_version = '1.4.10'
         archLifecycleVersion = '1.1.1'
+        room_version = '2.4.0-beta01'
+        coroutine_version = '1.3.7'
         gradleVersion = '4.1.0'
         supportlibVersion = '1.2.0'
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
