--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ apply plugin: 'kotlin-kapt'
 // Adding the apply plugin statement for safeargs
 apply plugin: 'androidx.navigation.safeargs'
 
+apply plugin: 'jacoco'
+
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,6 +47,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            testCoverageEnabled true
         }
     }
     productFlavors {
@@ -71,9 +77,25 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    testImplementation 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    androidTestImplementation 'org.testng:testng:6.9.6'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    //App's dependencies, including test
+    implementation 'com.android.support:support-annotations:22.2.0'
+
+    implementation "org.jacoco:org.jacoco.core:0.8.6"
+
+// Testing-only dependencies
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestImplementation 'junit:junit:4.12'
+
+    testImplementation 'junit:junit:4.12'
+
+    def fragment_version = "1.4.0"
+
+    debugImplementation("androidx.fragment:fragment-testing:$fragment_version")
 
     def nav_version = "2.3.5"
 
