--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 08 23:42:11 EET 2021
-sdk.dir=C\:\\Users\\TULPAR\\AppData\\Local\\Android\\Sdk
+#Sat Dec 25 00:58:02 TRT 2021
+sdk.dir=C\:\\Users\\batbi\\AppData\\Local\\Android\\Sdk
