--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 25 00:58:02 TRT 2021
-sdk.dir=C\:\\Users\\batbi\\AppData\\Local\\Android\\Sdk
+#Sat Dec 25 01:27:41 TRT 2021
+sdk.dir=/Users/betulseyhan/Library/Android/sdk
